/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-11-05  Gilles Dumortier <dgil at ieee.org>
	* Euronext quotes - display only Euronext Paris !? (SF bug 1589626)
		key : <ISINorTICKER>.<EXCHANGE>.<PLACE>
	* Marche Libre - ValueError (SF bug 1590367)

2006-11-03  Gilles Dumortier <dgil at ieee.org>
	* "official" tarball for testing
	* Backend WXAgg -> WX (better perf + remove unicode dependancy)
	* Specific connector for deffered prices (SF bug 1589922)
	* Download EURONEXT list of quotes : use the MEP (SF bug 1589626)

2006-11-02  Gilles Dumortier <dgil at ieee.org>
	* Experimental Binary Package : 8 to 9 M bytes (SF bug 1477443)
	* Property View : should be independent (SF bug 1589102)
	* Fix a bug when a quote has more than 1 property to save

Merge back branch ITRADE_0_4_5_new_quote_reference :
	2006-11-02:
	* Quote View:Properties Panel:List of live plugins (SF bug 1560067)
	* Quote View:Properties Panel:List of import plugins (SF bug 1560066)
	* Euronext livedata (differed 15 min) plugin (SF bug 1497570)
	* Euronext requires an IdInstrument (isin not enough). Special Hack !
	  NB: also, found a way to differenciate place. For example L'OREAL
	  (OR) have two IdInstrument for the same isin : one for PARis and
	  one for AMSterdam. Use the place information to discriminate.
	2006-11-01:
	* Euronext historic data import plugin (SF bug 1497570)
	* Rewrite part of the connectors management
	2006-10-31:
	* Euronext importing list : some quote are bogus (SF bug 1588092)
	* Manage User / System list of quotes
	* Add a quote in a user quotes.txt (SF bug 1410683)
	* Clear list(s) of quotes (SF bug 1587735)
	2006-10-30:
	* ISIN or TICKER ? (SF bug 1587117)
	* import OTCBB & LSE historic data + live (SF bug 1587345)
	* List of Quotes : no refresh after Importation (SF bug 1563518)